eks-infra/k8s-configs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: casestudy-ns
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
